# shaderdevel

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  shader.frag  shader.vert  user_shader.glsl
